fix: add content visibility and containment styles to global CSS

--- a/app/global.css
+++ b/app/global.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+.contain-content {
+	contain: unset !important;
+	content-visibility: visible !important;
+}
+
 /* * */
 /* THEME SWITCH */
 
